  - Guardian serpents and draconian shifters' Blink Allies Encircling now
    blinks over 3 to 6 allies as is possible, instead of always 8.
  - Hell beasts have become sin beasts, gaining HD and antimagic attacks.
    Geryon's (hell -> sin) beast summoning has been weakened in exchange.
  - Monster shadows are now called shadowghasts.
  - Necrophages are weaker and now only appear from Yred's summonings.
  - Norris now casts Draining Gaze instead of Brain Bite.
  - Ophanim now passively irresistibly inflict Mark on all those they see.
  - Worldbinders now summon ironbound frosthearts instead of thunderhulks.
* Monster constriction is now more difficult to escape via moving, but blinks
  now always work as an escape.
* Monster frozen status now lasts a bit longer, inflicts a heavier movement
  penalty, and no longer blocks further Flash Freeze casts.
* Monster repel missiles now acts as a flat +15 effective EV against
  projectiles, rather than scaling heavily to the monster's own EV.
* Player ghosts now can cast a fair bit more low-level and mid-level spells.
* Removed monsters: burning bushes, lorocyprocas.

Species
-------
* New species: Coglins, goblins in mechanical exoskeletons. Features:
  - Their exoskeletons allow them to dual wield, but innately take a few
    swings to rev up to normal damage.
  - They can't wear jewellery, but at XL 13 they can choose to invent one of
    three gizmos that passively provide resists and unique benefits.
* Returning species: Since all species can become orcs, Hill Orcs swap out with
  Mountain Dwarves, with similar but less skewed apts and stats. New features:
  - They ignore half of the spellcasting penalty heavy armour would inflict.
  - They can enchant randart equipment up to the base equipment's default
    enchantment maximum.
* Draconian breaths have been revamped: most effects have been replaced for
  much stronger and flashier effects, but now use a limited number of charges