@@ -223,7 +223,7 @@ MONS:  dread lich / shadow demon / curse skull / ironbound convoker / \
        demonspawn corrupter / undying armoury w:5 / deep elf demonologist / \
        mummy priest w:5 / royal mummy w:5 / deep elf death mage
 MONS:  titan / glass eye / ghost moth / glowing orange brain / tormentor
-MONS:  demonspawn black sun / torpor snail / \
+MONS:  demonspawn soul scholar / torpor snail / \
        servant of whispers / tainted leviathan
 MONS:  plant / demonic plant / butterfly
 KFEAT: m = iron_grate
