@@ -43,7 +43,7 @@ function gammafunk_the_bubble_setup(e, entry_glyph, exit_glyph)
        e.subst("8 = 28")
     elseif you.in_branch("Pandemonium") then
        -- 8 and 9 spawns both aren't a thing in Pan, so make these ourself.
-       e.kmons("2 = greater demon w:20 / demonspawn black sun w:5" ..
+       e.kmons("2 = greater demon w:20 / demonspawn soul scholar w:5" ..
                "    / demonspawn blood saint w:5 / demonspawn corrupter w:5" ..
                "    / demonspawn warmonger w:5")
        e.kmons("3 = executioner / brimstone fiend / ice fiend / tzitzimitl" ..
