@@ -1003,11 +1003,6 @@ demonspawn
 
 一个半人半魔的生物，能从身上一些恶魔的特征看出他有来自地狱的血统。
 %%%%
-demonspawn black sun
-
-一个半人半魔的生物，身上覆盖着冰蓝色的鳞片。
-他挥动着的黑暗力量，那是来自死亡之神的恩赐。
-%%%%
 demonspawn blood saint
 
 一个半人半魔的生物，散发着强烈的热量。他编织着强大而不可预测的毁灭咒语。
@@ -1016,6 +1011,11 @@ demonspawn corrupter
 
 一个半人半魔的生物，散发着黑暗能量。
 他扭曲了自身周围的空间，可以腐蚀武器、盔甲甚至对方的血肉。
+%%%%
+demonspawn soul scholar
+
+一个半人半魔的生物，身上覆盖着冰蓝色的鳞片。
+他挥动着的黑暗力量，那是来自死亡之神的恩赐。
 %%%%
 demonspawn warmonger
 
