@@ -94,7 +94,7 @@ enum band_type
     BAND_BLOOD_SAINT,
     BAND_WARMONGER,
     BAND_CORRUPTER,
-    BAND_BLACK_SUN,
+    BAND_SOUL_SCHOLAR,
     BAND_VASHNIA,
     BAND_CEREBOV,
     BAND_GLOORX_VLOQ,
