@@ -1027,7 +1027,7 @@ POP_DEPTHS,
   {  1,  1,  675, FLAT, MONS_DEMONSPAWN_BLOOD_SAINT },
   {  1,  1,  675, FLAT, MONS_DEMONSPAWN_WARMONGER },
   {  1,  1,  675, FLAT, MONS_DEMONSPAWN_CORRUPTER },
-  {  1,  1,  675, FLAT, MONS_DEMONSPAWN_BLACK_SUN },
+  {  1,  1,  675, FLAT, MONS_DEMONSPAWN_SOUL_SCHOLAR },
   {  1,  1,   50, FLAT, MONS_ANGEL },
   {  1,  1,   40, FLAT, MONS_CHERUB },
   {  1,  1,   25, FLAT, MONS_DAEVA },
