@@ -287,7 +287,7 @@ enum monster_type                      // env.mons[].type
     MONS_DEMONSPAWN_BLOOD_SAINT,
     MONS_DEMONSPAWN_WARMONGER,
     MONS_DEMONSPAWN_CORRUPTER,
-    MONS_DEMONSPAWN_BLACK_SUN,
+    MONS_DEMONSPAWN_SOUL_SCHOLAR,
 #endif
     MONS_GARGOYLE,
     MONS_WAR_GARGOYLE,
@@ -1101,7 +1101,7 @@ enum monster_type                      // env.mons[].type
     MONS_CHAOS_CHAMPION,        // removed
     MONS_DEMONSPAWN_WARMONGER,
     MONS_DEMONSPAWN_CORRUPTER,
-    MONS_DEMONSPAWN_BLACK_SUN,
+    MONS_DEMONSPAWN_SOUL_SCHOLAR,
 
     MONS_WORLDBINDER,
     MONS_GRAND_AVATAR,
